# Worm2D

./: .gitignore  CMakeLists.txt  HISTORY.md  LICENSE  README.md  pyproject.toml  test_all.sh
.github/workflows/: ci-make.yml  python-publish.yml
src/CE_locomotion/: Makefile  Muscles.h  NervousSystem.cpp  NervousSystem.h  Worm.cpp  Worm.h  WormBody.h  argUtils.cpp  argUtils.h  jsonUtils.cpp  jsonUtils.h  main.cpp  tests.cpp  utils.h
src/CE_locomotion/test_output/: README.md
src/cpp/: Mainvars.h  Muscles.h  NervousSystem.cpp  NervousSystem.h  TSearch.cpp  TSearch.h  TSearch_gp.cpp  TSearch_gp.h  TSearch_gp2.cpp  TSearch_gp2.h  TSearch_orig.cpp  TSearch_orig.h  VectorMatrix.h  VectorMatrix11.h  VectorMatrix17.h  VectorMatrix_orig.h  Worm.cpp  Worm.h  WormBody.cpp  WormBody.h  argUtils.cpp  argUtils.h  jsonUtils.cpp  main.cpp  random.h  random_gp.cpp  random_orig.h  tests.cpp  tests2.cpp  utils.cpp  utils.h
src/cpp/CE_orientation/: CTRNN.cpp  CTRNN.h  TSearch.cpp  TSearch.h  VectorMatrix.h  WormAgent.cpp  WormAgent.h  main.cpp  random.h
src/cpp/RoyalSociety2018/: NervousSystem.cpp  NervousSystem.h  Worm.cpp  Worm.h  jsonUtils.cpp  jsonUtils.h  main.cpp  test.sh
src/cpp/Worm2D/: CTRNN.cpp  CTRNN.h  Evolution.cpp  Evolution.h  Evolution21.cpp  Evolution21.h  EvolutionCE.cpp  EvolutionCE.h  EvolutionCO.cpp  EvolutionCO.h  EvolutionRS18.cpp  EvolutionRS18.h  Evolvable.cpp  Evolvable.h  NSToMuscles.cpp  NSToMuscles.h  Segment21.cpp  Segment21.h  Simulation.cpp  Simulation.h  StretchReceptor.cpp  StretchReceptor.h  StretchReceptor18.cpp  StretchReceptor18.h  StretchReceptorCE.cpp  StretchReceptorCE.h  TSearchCO.cpp  TSearchCO.h  VectorMatrixCO.h  Worm21.cpp  Worm21.h  Worm2D.cpp  Worm2D.h  Worm2D21.cpp  Worm2D21.h  Worm2DCE.cpp  Worm2DCE.h  Worm2DSR.cpp  Worm2DSR.h  Worm2Dmods.cpp  (+9 more)
src/cpp/network2021/: NervousSystem.cpp  Worm.cpp  WormBody.h  main.cpp
src/cpp/neuromlLocal/: NSBaseForW2D.h  NervousSystemBase.h  c302ForW2D.cpp  c302ForW2D.h  c302NervousSystem.cpp  c302NervousSystem.h  neuroml_utils.h  owINeuronSimulator.h  owSignalSimulator.cpp  owSignalSimulator.h  owSignalSimulatorForWorm2D.cpp  owSignalSimulatorForWorm2D.h
src/neuromlModel/: NSBaseForW2D.h  NervousSystemBase.h  c302ForW2D.cpp  c302ForW2D.h  c302NervousSystem.cpp  c302NervousSystem.h  owINeuronSimulator.h  owSignalSimulator.cpp  owSignalSimulator.h  owSignalSimulatorForWorm2D.cpp  owSignalSimulatorForWorm2D.h
src/worm2d/: F2_fig_behavior.py  W2Djson_utils.py  __init__.py  analyse_runs.py  helper_funcs.py  load_data.py  osc21alldemo.py  regenerate_folder.py  runExp.py  runExpW2DSR.py  runExpW2Dosc.py  run_izq_sims.py  run_izq_sims_W2D21.py  run_main.py  run_osc_sim.py  run_osc_sim_21.py  run_osc_sim_21all.py
src/worm2d/neuromlLocal/: .test.21w2d.mep  .test.21w2d.nrn.omt  .test.21w2d.omt  .test.w2d.mep  .test.w2d.nrn.omt  .test.w2d.omt  build_network.py  cell_W2Dosc.xml  cell_syn_W2D.xml  clean.sh  create_new_lems_file.py  main_sim.py  musc_W2D.xml  musc_X.xml  musc_X_cells.xml  regenerate.py  regenerate.sh  regenerate_21.sh  regenerate_all.py  run_izq_sims.py  run_osc_sim.py  run_osc_sim_21.py  syn_W2D.xml  utils.py
src/worm2d/neuromlLocal/testc302SigSim/: Makefile  test.sh  testc302NervousSystem.cpp
tests/: .test.W2DCE.mep  .test.W2DCE.omt  .test.W2DCEa.omt  .test.W2DCEanm.mep  .test.W2DCEanm.omt  .test.W2DCEanm2.mep  .test.W2DCEanm2.omt  .test.W2DCEs.mep  .test.W2DCEs.omt  .test.example.mep  .test.example.omt  test.py  testW2DCE.py  testW2DCEa.py  testW2DCEanm.py  testW2DCEanm2.py  testW2DCEs.py
tests/test_files/: Makefile  TestPy.py  simple.sh  t.c  test.sh  test_py_cpp.cpp
tests/test_files/modelspec_api/: test.sh  worm2D_modelspec.py  worm2d_example.json  worm2d_example.yaml  worm2d_spec.md
